# geany-plugins

./: MAINTAINERS  Makefile.am  configure.ac
addons/: README
addons/src/: Makefile.am  addons.c
po/: POTFILES.in
tabsort/: .clang-format  Makefile.am  tabsort.c  ui.glade
workbench/src/: wb_project.c
